# strands_rosie

./: CMakeLists.txt  README.md
documents/: rosie.tex
launch/: rosie_cameras.launch  rosie_core.launch  rosie_mapping.launch  rosie_navigation.launch  rosie_robot.launch
rosie_routine/: CMakeLists.txt  package.xml
rosie_routine/scripts/: marathon_y2_rosie_routine.py  rosie_dynamic.py  rosie_routine_y2.py
scripts/: start.sh
strands_rosie/: package.xml
strands_rosie/launch/: rosie_core.launch  rosie_navigation.launch  rosie_robot.launch  rosie_scheduler.launch
strands_rosie/scripts/: start.sh
